Implement cost function (not working yet)

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "from calibration import get_calibration_function_median, get_calibration_function_dict\n",
-    "from inference import InferenceMachine\n",
+    "from inference import Inference\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
@@ -246,7 +246,7 @@
     "#    calib_function, calib_freq = get_calibration_function_median(\n",
     "#        exp_name=\"2021_02_23_wall\", mic_type=\"audio_deck\", ax=ax\n",
     "#    )\n",
-    "inf_machine = InferenceMachine()\n",
+    "inf_machine = Inference()\n",
     "inf_machine.add_calibration_function(calib_function)"
    ]
   },
@@ -286,7 +286,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -294,15 +294,17 @@
     "from copy import deepcopy\n",
     "from data_collector import DataCollector\n",
     "from estimators import DistanceEstimator\n",
-    "from inference import get_probability_bayes\n",
     "from simulation import get_freq_slice_theory\n",
     "\n",
     "linestyles = {\"measured\": \"-\", \"theo\": \":\", \"theo_corr\": \"-.\"}\n",
     "EPS = 1e-10\n",
     "\n",
     "starting_distance = 60  # [50, 30, 10]\n",
-    "nominal_distances = [60 - i * 20 for i in range(3)]\n",
+    "nominal_distances = [60 - i * 20 for i in range(3)] # [60, 40, 20]\n",
     "slice_idx = 0\n",
+    "\n",
+    "algorithm = \"bayes\"\n",
+    "#algorithm = \"cost\" # not working yet!\n",
     "\n",
     "data_collector = DataCollector(exp_name=exp_name)\n",
     "\n",
@@ -344,9 +346,19 @@
     "        sweep_complete = data_collector.next_fslice_ready(signals_f, frequencies)\n",
     "\n",
     "    if sweep_complete:\n",
+    "        print(\"treating new frequency slice\")\n",
     "        f_slice, freqs, stds, distances = data_collector.get_current_frequency_slice(\n",
     "            verbose=False\n",
     "        )\n",
+    "        \n",
+    "        # TODO(continue here)\n",
+    "        # distances is with respect to the starting distance. we want to add here only distances\n",
+    "        # with respect to the current distances.\n",
+    "        rel_distances = starting_distance - distances - nominal_distances[slice_idx]\n",
+    "        \n",
+    "        inf_machine.add_data(deepcopy(f_slice), freqs, stds, deepcopy(rel_distances))\n",
+    "        inf_machine.calibrate()\n",
+    "        inf_machine.filter_out_freqs([3700, 3800])\n",
     "\n",
     "        fig, ax_total = plt.subplots()\n",
     "        fig.set_size_inches(10, 5)\n",
@@ -359,20 +371,14 @@
     "        fig.suptitle(f\"up to {data_collector.latest_fslice_time:.1f}s\", y=0.9)\n",
     "        # fig.set_suptitle(f\"experiment {row.appendix}\")\n",
     "\n",
-    "\n",
-    "        # TODO: remove these intermediate things\n",
-    "        inf_machine.add_data(deepcopy(f_slice), freqs, stds, distances)\n",
-    "        inf_machine.calibrate()\n",
-    "        inf_machine.filter_out_freqs([3700, 3800])\n",
-    "        \n",
-    "        # raw data\n",
+    "        # raw data, for plotting only\n",
     "        freqs = inf_machine.values[inf_machine.valid_idx]\n",
     "        f_slice = f_slice[:, inf_machine.valid_idx]\n",
-    "\n",
-    "        distance_corr = starting_distance - inf_machine.distances[inf_machine.valid_idx]\n",
-    "        ax_df.scatter(distance_corr, freqs, color=f\"C{slice_idx}\")\n",
+    "        distances = distances[inf_machine.valid_idx]\n",
+    "        rel_distances = rel_distances[inf_machine.valid_idx]\n",
     "        \n",
-    "        print(\"treating new frequency slice\")\n",
+    "        distance_corr = starting_distance - distances \n",
+    "        ax_df.scatter(distance_corr, freqs, color=f\"C{slice_idx}\")\n",
     "\n",
     "        distance_estimators = {\n",
     "            \"measured\": DistanceEstimator(),\n",
@@ -381,51 +387,48 @@
     "        }\n",
     "\n",
     "        for i_mic in range(f_slice.shape[0]):\n",
-    "            \n",
     "            axs[0, i_mic].plot(freqs, f_slice[i_mic], label=\"measured\")\n",
     "            axs[0, i_mic].legend(loc=\"upper right\")\n",
     "            axs[0, i_mic].set_title(f\"mic{i_mic}\")\n",
-    "\n",
     "            \n",
+    "        # treat measured data\n",
     "        for i_mic in range(f_slice.shape[0]):\n",
-    "            # get probability distribution\n",
-    "            distances_bayes, proba, diff_bayes = inf_machine.do_inference(\n",
-    "                mic_idx=i_mic, algorithm=\"bayes\", normalize=True\n",
+    "            dists, proba, diff = inf_machine.do_inference(\n",
+    "                mic_idx=i_mic, algorithm=algorithm, normalize=True\n",
     "            )\n",
     "            distance_estimators[\"measured\"].add_distribution(\n",
-    "                diff_bayes * 1e-2, proba, i_mic\n",
+    "                diff * 1e-2, proba, i_mic\n",
     "            )\n",
     "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"measured\")\n",
-    "            axs[2, i_mic].plot(distances_bayes, proba, label=\"measured\")\n",
+    "            axs[2, i_mic].plot(dists, proba, label=\"measured\")\n",
     "            \n",
-    "\n",
     "        f_theo = get_freq_slice_theory(\n",
     "            freqs, distance_cm=nominal_distances[slice_idx], azimuth_deg=azimuth_deg\n",
     "        ).T  # n_mics x n_freqs\n",
     "        inf_machine.add_data(f_theo, freqs)\n",
     "        for i_mic in range(f_theo.shape[0]):\n",
-    "            distances_bayes_theo, proba_theo, diff_bayes_theo = inf_machine.do_inference(\n",
-    "                mic_idx=i_mic, algorithm=\"bayes\", normalize=True, calibrate=False\n",
+    "            dists_theo, proba_theo, diff_theo = inf_machine.do_inference(\n",
+    "                mic_idx=i_mic, algorithm=algorithm, normalize=True, calibrate=False\n",
     "            )\n",
     "            distance_estimators[\"theo\"].add_distribution(\n",
-    "                diff_bayes_theo * 1e-2, proba_theo, i_mic\n",
+    "                diff_theo * 1e-2, proba_theo, i_mic\n",
     "            )\n",
     "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"theo\", color=\"C6\", ls=\":\")\n",
-    "            axs[2, i_mic].plot(distances_bayes_theo, proba_theo, label=\"theo\")\n",
+    "            axs[2, i_mic].plot(dists_theo, proba_theo, label=\"theo\")\n",
     "            \n",
     "        f_theo_corr = get_freq_slice_theory(\n",
     "            freqs, distance_cm=distance_corr, azimuth_deg=azimuth_deg\n",
     "        ).T\n",
-    "        inf_machine.add_data(f_theo_corr, freqs)\n",
+    "        inf_machine.add_data(f_theo_corr, freqs, distances=rel_distances)\n",
     "        for i_mic in range(f_theo_corr.shape[0]):\n",
-    "            distances_bayes_theo_corr, proba_theo_corr, diff_bayes_theo_corr = inf_machine.do_inference(\n",
-    "                mic_idx=i_mic, algorithm=\"bayes\", normalize=True, calibrate=False\n",
+    "            dists_theo_corr, proba_theo_corr, diff_theo_corr = inf_machine.do_inference(\n",
+    "                mic_idx=i_mic, algorithm=algorithm, normalize=True, calibrate=False\n",
     "            )\n",
     "            distance_estimators[\"theo_corr\"].add_distribution(\n",
-    "                diff_bayes_theo_corr * 1e-2, proba_theo_corr, i_mic\n",
+    "                diff_theo_corr * 1e-2, proba_theo_corr, i_mic\n",
     "            )\n",
     "            axs[2, i_mic].plot(\n",
-    "                distances_bayes_theo_corr, proba_theo_corr, label=\"theo_corr\"\n",
+    "                dists_theo_corr, proba_theo_corr, label=\"theo_corr\"\n",
     "            )\n",
     "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"theo_corr\", color=\"C7\", ls=\":\")\n",
     "\n",
@@ -433,6 +436,7 @@
     "            distance_total, proba_total = distance_estimator.get_distance_distribution(\n",
     "                method=\"sum\", chosen_mics=None, azimuth_deg=azimuth_deg\n",
     "            )\n",
+    "            proba_total = (proba_total - np.min(proba_total)) / (np.max(proba_total) - np.min(proba_total))\n",
     "            ax_total.plot(\n",
     "                distance_total * 1e2,\n",
     "                proba_total,\n",
@@ -617,7 +621,7 @@
     "mic_idx = 0\n",
     "#maxi = np.nanmax(np.concatenate([*dfs.spectrogram], axis=1))\n",
     "for i_col, row in df_total.iterrows():\n",
-    "    pass\n",
+    "    continue\n",
     "    #fig, ax = plot_audio(row, mic_idx=mic_idx)\n",
     "    \n",
     "    plt.figure()\n",
