Improve experimental results

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -42,7 +42,6 @@
     "distance = 15\n",
     "yaws = np.array([0, 15, 30])\n",
     "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
-    "print(azimuths)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
@@ -333,7 +332,7 @@
     "    fig.suptitle(titles[algo])\n",
     "    axs[0, 1].set_xlim(0,  90)\n",
     "    axs[0, 0].set_ylim(-90,  90)\n",
-    "    save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')"
+    "    save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf', extension='png')"
    ]
   },
   {
@@ -494,14 +493,14 @@
     "    ax.set_title(f\"{normalization}\")\n",
     "    ax.set_xlabel('distance [cm]')\n",
     "add_colorbar(fig, ax, im)\n",
-    "save_fig(fig, f\"{plot_dir}/{fname}_matrices_mic{mic_idx}.png\")"
+    "save_fig(fig, f\"{plot_dir}/{fname}_matrices_mic{mic_idx}.png\", extension='png')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Performance"
+    "## 3.2 Performance\n"
    ]
   },
   {
@@ -630,7 +629,7 @@
     "        axs[0, 1].set_xlim(-1, max(distances))\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
-    "        save_fig(fig, fname_here)"
+    "        save_fig(fig, fname_here, extension='png')"
    ]
   },
   {
