--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -179,7 +179,7 @@
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
     "mic_idx = 1\n",
-    "distances = np.arange(10, 60)\n",
+    "distances = np.arange(10, 60, step=0.2)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
     "\n",
     "fname = \"results/df_matrix_pyroom.pkl\"\n",
@@ -277,14 +277,15 @@
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
     "im = ax.pcolorfast(dist, freq, df_matrix_theo[freq_start:freq_end, dist_start:dist_end])\n",
+    "ax.set_xlabel(\"distance [cm]\")\n",
+    "ax.set_ylabel(\"frequency [Hz]\")\n",
+    "save_fig(fig, \"plots/theory/distance-frequency-matrix.png\", extension=\"png\")\n",
     "add_colorbar(fig, ax, im, title=\"amplitude [-]\")\n",
     "ax.set_title(\"distance-frequency matrix for azimuth $\\\\theta=0$\")\n",
     "ax.axhline(start_freq, color=\"C1\", label=\"distance slice\")\n",
     "ax.axvline(start_dist, color=\"C8\", label=\"frequency slice\")\n",
     "ax.legend(framealpha=1.0)\n",
-    "ax.set_xlabel(\"distance [cm]\")\n",
-    "ax.set_ylabel(\"frequency [Hz]\")\n",
-    "save_fig(fig, \"plots/distance-frequency-matrix.pdf\")\n",
+    "save_fig(fig, \"plots/theory/distance-frequency-matrix.pdf\")\n",
     "\n",
     "matrix_slices(\n",
     "    df_matrix_theo[freq_start:freq_end, dist_start:dist_end],\n",
@@ -292,7 +293,7 @@
     "    dist,\n",
     "    start_freq=start_freq,\n",
     "    start_dist=start_dist,\n",
-    "    saveas=\"plots/distance-frequency-slices.pdf\",\n",
+    "    saveas=\"plots/theory/distance-frequency-slices.pdf\",\n",
     ")"
    ]
   },
