--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -125,7 +125,7 @@
     "df_matrix_raw, df_dist, df_freq_raw = data_collector.get_df_matrix()\n",
     "df_matrix, df_freq, indices = prune_df_matrix(\n",
     "    df_matrix_raw, df_freq_raw, verbose=True\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -237,25 +237,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from inference import get_approach_angle_fft, get_gamma_distribution, get_approach_angle_cost\n",
-    "from plotting_tools import plot_performance, save_fig\n",
-    "from estimators import get_estimate\n",
-    "from simulation import factor_distance_to_delta\n",
-    "\n",
     "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
-    "\n",
-    "titles = {\n",
-    "    'cost': 'optimization-based method',\n",
-    "    'bayes': 'FFT-based method',\n",
-    "    'bayes-combination': 'Bayesian method'\n",
-    "}\n",
-    "\n",
-    "plot_slices = False #True\n",
+    "from simulation import factor_distance_to_delta\n",
     "\n",
     "d1 = df_dist[-1] # starting distance of distance slice. \n",
     "rel_movement_cm = df_dist[1]-df_dist[0]\n",
@@ -270,15 +256,50 @@
     "                                        rel_movement_cm, \n",
     "                                        mic, azimuth_deg=azimuth_deg) \n",
     "               for mic in range(4)}\n",
-    "print('factors_min:\\n', factors_min)\n",
+    "print('factors_min:\\n', factors_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from inference import get_approach_angle_fft, get_gamma_distribution, get_approach_angle_cost\n",
+    "from plotting_tools import plot_performance, save_fig\n",
+    "from estimators import get_estimate, AngleEstimator\n",
+    "\n",
+    "titles = {\n",
+    "    'cost': 'optimization-based method',\n",
+    "    'bayes': 'FFT-based method',\n",
+    "    'bayes-combination': 'Bayesian method'\n",
+    "}\n",
+    "linestyles = {\n",
+    "    \"cost\": ':',\n",
+    "    \"bayes\": '-'\n",
+    "}\n",
+    "\n",
+    "\n",
+    "plot_slices = False\n",
     "\n",
     "start_distances_grid = [max(df_dist) + i for i in [0, 10, 20]]\n",
-    "gammas_grid = np.arange(90)\n",
+    "gammas_grid = np.arange(1, 90, step=1)\n",
     "\n",
     "factor = 2\n",
     "gt_gamma = 90 # in degrees\n",
     "\n",
+    "\n",
+    "fig, ax_total = plt.subplots()\n",
+    "ax_total.set_xlabel('approach angle $\\\\gamma$')\n",
+    "ax_total.set_ylabel('probability')\n",
+    "ax_total.set_title('combined distribution across mics and frequencies')\n",
+    "\n",
     "for algo in [\"cost\", \"bayes\"]:\n",
+    "    \n",
+    "    estimator = AngleEstimator()\n",
+    "\n",
     "    err_dict = {f\"mic{m}\": [np.nan]*len(df_freq) for m in range(df_matrix.shape[0])}\n",
     "    for i, f in enumerate(df_freq):\n",
     "        print(f)\n",
@@ -298,6 +319,7 @@
     "                                                      prob_ratios, \n",
     "                                                      factor=factor)\n",
     "                                                      #factors[mic_idx])\n",
+    "                \n",
     "            elif algo == \"cost\":\n",
     "                prob = get_approach_angle_cost(\n",
     "                    d_slice,\n",
@@ -309,22 +331,25 @@
     "                    azimuth_deg=azimuth_deg\n",
     "                )  # is of shape n_start_distances x n_gammas_grid\n",
     "                gammas = gammas_grid\n",
-    "\n",
+    "                \n",
+    "            estimator.add_distribution(gammas, prob, mic_idx, f)\n",
+    "                \n",
+    "            ax_cost.plot(gammas, prob)\n",
     "            gamma = get_estimate(gammas, prob)\n",
     "            err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "\n",
-    "\n",
     "            if plot_slices:\n",
     "                ax.plot(gammas, prob)\n",
-    "                ax.axvline(gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
-    "                #ax.plot(ratios, prob_ratios)\n",
-    "                #ax.axvline(gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
+    "                ax.axvline(gamma, label=f'mic{mic_idx}, {algo}', color=f'C{mic_idx}', ls=linestyles[algo])\n",
     "\n",
     "        if plot_slices:\n",
     "            ax.set_title(f'frequency {f:.0f}Hz')\n",
     "            ax.set_xlabel('angle of approach $\\\\gamma$ [deg]')\n",
     "            ax.set_ylabel('probability')\n",
     "            ax.legend()\n",
+    "    \n",
+    "    angles, prob = estimator.get_angle_distribution()\n",
+    "    ax_total.plot(angles, prob, label=algo)\n",
     "\n",
     "    fname = f\"{exp_name}_{motors}\"\n",
     "    fig, axs = plot_performance(err_dict, xs=df_freq, \n",
@@ -332,7 +357,9 @@
     "    fig.suptitle(titles[algo])\n",
     "    axs[0, 1].set_xlim(0,  90)\n",
     "    axs[0, 0].set_ylim(-90,  90)\n",
-    "    save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf', extension='png')"
+    "    save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf', extension='png')\n",
+    "\n",
+    "ax_total.legend()"
    ]
   },
   {
@@ -500,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Performance\n"
+    "## 3.2 Performance"
    ]
   },
   {
@@ -612,7 +639,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -639,110 +666,139 @@
    "outputs": [],
    "source": [
     "from inference import get_probability_cost, get_probability_bayes\n",
+    "from inference import eps_normalize\n",
     "from simulation import get_freq_slice_theory\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "\n",
     "mic_idx = 1\n",
+    "eps = 1e-5\n",
     "\n",
-    "chosen_methods = [\"raw\", \"calibration-global\", \"theoretical\"]\n",
-    "#chosen_methods = method_dict.keys()\n",
-    "plot_combis = [{\n",
-    "    'distance': 15,\n",
-    "    'algorithms': [\"bayes\"] #[\"cost\", \"bayes\"] #\"bayes-combination\"]\n",
-    "}]\n",
-    "    \n",
-    "for plot_combi in plot_combis: \n",
-    "    distance = plot_combi.get('distance')\n",
-    "    algorithms = plot_combi.get('algorithms')\n",
+    "chosen_methods = [\"raw\", \"calibration-individual\", \"theoretical\"]\n",
+    "# chosen_methods = method_dict.keys()\n",
+    "plot_combis = [\n",
+    "    {\"distance\": 15, \"algorithms\": [\"bayes\"]}  # [\"cost\", \"bayes\"] #\"bayes-combination\"]\n",
+    "]\n",
+    "\n",
+    "for plot_combi in plot_combis:\n",
+    "    distance = plot_combi.get(\"distance\")\n",
+    "    algorithms = plot_combi.get(\"algorithms\")\n",
     "    fname = f\"{exp_name}_{motors}_{distance:.0f}cm\"\n",
-    "    \n",
-    "    fig_slice, axs_slice = plt.subplots(len(chosen_methods), n_mics, sharex=True, sharey=True)\n",
-    "    fig_slice.set_size_inches(3*n_mics, 2*len(chosen_methods))\n",
-    "    \n",
+    "\n",
+    "    fig_slice, axs_slice = plt.subplots(len(chosen_methods), n_mics, sharex=True)\n",
+    "    fig_slice.set_size_inches(3 * n_mics, 2 * len(chosen_methods))\n",
+    "\n",
     "    fig_algos = {}\n",
     "    axs_algos = {}\n",
     "    for algo in algorithms:\n",
-    "        fig_algo, axs_algo = plt.subplots(len(chosen_methods), n_mics, sharex=True, sharey='row', squeeze=False)\n",
-    "        fig_algo.set_size_inches(3*n_mics, 2*len(chosen_methods))\n",
+    "        fig_algo, axs_algo = plt.subplots(\n",
+    "            len(chosen_methods), n_mics, sharex=True, squeeze=False, sharey=True\n",
+    "        )\n",
+    "        fig_algo.set_size_inches(3 * n_mics, 2 * len(chosen_methods))\n",
     "        fig_algos[algo] = fig_algo\n",
     "        axs_algos[algo] = axs_algo\n",
-    "        \n",
-    "    fig_combi, ax_combi = plt.subplots(len(chosen_methods), 1, squeeze=False, sharex=True)\n",
-    "    \n",
-    "    distance_estimators = {\n",
-    "        k: DistanceEstimator() for k in chosen_methods\n",
-    "    }\n",
-    "    \n",
+    "\n",
+    "    distance_estimators = {k: DistanceEstimator() for k in chosen_methods}\n",
+    "\n",
     "    for i_mic, mic_idx in enumerate(mic_indices):\n",
+    "        print(mic_idx)\n",
     "        for i_method, method in enumerate(chosen_methods):\n",
-    "            \n",
-    "            if method == \"theoretical\": \n",
-    "                slice_exp = get_freq_slice_theory(df_freq, distance, chosen_mics=[mic_idx])\n",
-    "                freqs = df_freq\n",
+    "            print(method)\n",
+    "            if method == \"theoretical\":\n",
+    "                slice_exp = get_freq_slice_theory(\n",
+    "                    df_freq, distance, chosen_mics=[mic_idx]\n",
+    "                )\n",
+    "                freqs_here = df_freq\n",
     "                slice_exp = slice_exp[:, 0]\n",
     "                std = 1\n",
     "            else:\n",
     "                normalize_method = method_dict[method]\n",
-    "                slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
-    "                    df_freq, distance, normalize_method=normalize_method, mics=[mic_idx])\n",
+    "                slice_exp, freqs_here, stds = data_collector.get_frequency_slice_fixed(\n",
+    "                    df_freq, distance, normalize_method=normalize_method, mics=[mic_idx]\n",
+    "                )\n",
     "                slice_exp = slice_exp[0]\n",
     "                std = stds[0]\n",
-    "                \n",
-    "            #slice_exp = fill_nans(slice_exp, freqs)\n",
+    "\n",
+    "            # slice_exp = fill_nans(slice_exp, freqs)\n",
     "\n",
     "            # doing this here for plotting reasons. Doesn't change performance as\n",
     "            # this is done again in get_probability_cost\n",
     "            slice_exp -= np.nanmean(slice_exp)\n",
     "            slice_exp /= np.nanstd(slice_exp)\n",
     "\n",
-    "            axs_slice[i_method, i_mic].plot(freqs, slice_exp, label=method, color=f\"C{i_method}\")\n",
+    "            axs_slice[i_method, i_mic].plot(\n",
+    "                freqs_here, slice_exp, label=method, color=f\"C{i_method}\"\n",
+    "            )\n",
     "            axs_slice[i_method, i_mic].set_xlim(min_freq, max_freq)\n",
-    "            axs_slice[i_method, 0].set_ylabel(f'{method}')\n",
+    "            axs_slice[i_method, 0].set_ylabel(f\"{method}\")\n",
     "            axs_slice[0, i_mic].set_title(f\"mic{mic_idx}\")\n",
-    "            \n",
+    "\n",
     "            for algo in algorithms:\n",
     "                axs_algo = axs_algos[algo]\n",
-    "                \n",
+    "\n",
     "                if algo == \"cost\":\n",
     "                    proba = get_probability_cost(\n",
-    "                        slice_exp, freqs, \n",
-    "                        distances_grid, mic_idx=mic_idx\n",
+    "                        slice_exp, freqs_here, distances_grid, mic_idx=mic_idx\n",
     "                    )\n",
     "                    distances_here = distances_grid\n",
     "                elif algo == \"bayes\":\n",
     "                    distances_here, proba, diff_bayes = get_probability_bayes(\n",
     "                        slice_exp,\n",
-    "                        freqs, \n",
+    "                        freqs_here,\n",
     "                        mic_idx=mic_idx,\n",
     "                        distance_range=[min(distances_grid), max(distances_grid)],\n",
-    "                        sigma=std\n",
+    "                        sigma=std,\n",
     "                    )\n",
-    "                    distance_estimators[method].add_distribution(diff_bayes * 1e-2, proba, mic_idx)\n",
-    "                    \n",
+    "                    distance_estimators[method].add_distribution(\n",
+    "                        diff_bayes * 1e-2, proba, mic_idx\n",
+    "                    )\n",
+    "\n",
     "                d = get_estimate(distances_here, proba)\n",
     "\n",
-    "                axs_algo[i_method, i_mic].semilogy(distances_here, proba, color=f\"C{i_method}\")\n",
-    "                axs_algo[i_method, i_mic].axvline(x=d, color=f\"C{i_method}\", label=f'estimate')\n",
-    "                axs_algo[i_method, i_mic].axvline(x=distance, color=\"black\", ls=\":\", label=f'real: {distance:.0f}cm')\n",
-    "                axs_algo[i_method, i_mic].set_xlim(min(distances_here)-1, max(distances_here)+1)\n",
-    "                \n",
-    "                axs_algo[i_method, 0].set_ylabel(f'{method}')\n",
+    "                axs_algo[i_method, i_mic].semilogy(\n",
+    "                    distances_here, eps_normalize(proba, eps=eps), color=f\"C{i_method}\"\n",
+    "                )\n",
+    "                axs_algo[i_method, i_mic].axvline(\n",
+    "                    x=d, color=f\"C{i_method}\", ls=\":\", label=f\"estimate\"\n",
+    "                )\n",
+    "                axs_algo[i_method, i_mic].axvline(\n",
+    "                    x=distance, color=\"black\", ls=\":\", label=f\"real: {distance:.0f}cm\"\n",
+    "                )\n",
+    "                axs_algo[i_method, i_mic].set_xlim(\n",
+    "                    min(distances_here) - 1, max(distances_here) + 1\n",
+    "                )\n",
+    "                axs_algo[i_method, 0].set_ylabel(f\"{method}\")\n",
     "            axs_algo[0, i_mic].set_title(f\"mic{mic_idx}\")\n",
-    "    \n",
-    "    for i_method, (method, distance_estimator) in enumerate(distance_estimators.items()):\n",
-    "        distances_m, proba = distance_estimator.get_distance_distribution(verbose=False)\n",
-    "        distances_cm = distances_m * 1e2\n",
-    "        ax_combi[i_method, 0].plot(distances_cm, proba, color=f\"C{i_method}\")\n",
-    "        \n",
     "\n",
-    "    fname_here = f'{plot_dir}/{fname}_slice.png'\n",
-    "    #save_fig(fig_slice, fname_here)\n",
+    "    print(\"combining...\")\n",
+    "    fig_combi, ax_combi = plt.subplots()\n",
+    "    fig_combi.set_size_inches(5, 5)\n",
+    "    for i_method, (method, distance_estimator) in enumerate(\n",
+    "        distance_estimators.items()\n",
+    "    ):\n",
+    "        print(method)\n",
+    "        distances_m, proba = distance_estimator.get_distance_distribution(\n",
+    "            azimuth_deg=0, distances_m=np.arange(40) * 1e-2, verbose=False\n",
+    "        )\n",
+    "        distances_cm = distances_m * 1e2\n",
+    "        ax_combi.plot(\n",
+    "            distances_cm,\n",
+    "            eps_normalize(proba, eps=eps),\n",
+    "            color=f\"C{i_method}\",\n",
+    "            label=method,\n",
+    "        )\n",
+    "    ax_combi.axvline(x=distance, color=\"black\", ls=\":\", label=f\"real: {distance:.0f}cm\")\n",
+    "    ax_combi.legend(loc=\"lower right\")\n",
+    "    ax_combi.set_xlabel(\"distance [cm]\")\n",
+    "    ax_combi.set_ylabel(\"probability [-]\")\n",
+    "\n",
+    "    fname_here = f\"{plot_dir}/{fname}_slice.png\"\n",
+    "    # save_fig(fig_slice, fname_here)\n",
     "\n",
     "    for algo in algorithms:\n",
-    "        axs_algos[algo][-1, -1].legend(loc='upper right')\n",
-    "        #[ax.yaxis.set_major_formatter(FormatStrFormatter('%.1e')) for ax in axs_algos[algo][:, 0]]\n",
-    "        fname_here = f'{plot_dir}/{fname}_{algo}.png'\n",
-    "        #save_fig(fig_algos[algo], fname_here)"
+    "        axs_algos[algo][-1, -1].legend(loc=\"upper right\")\n",
+    "        # [ax.yaxis.set_major_formatter(FormatStrFormatter('%.1e')) for ax in axs_algos[algo][:, 0]]\n",
+    "        fname_here = f\"{plot_dir}/{fname}_{algo}.png\"\n",
+    "        # save_fig(fig_algos[algo], fname_here)"
    ]
   },
   {
