--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -414,7 +414,7 @@
     "                diff * 1e-2, proba, i_mic\n",
     "            )\n",
     "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"measured\",\n",
-    "                             normalize=True)\n",
+    "                             standardize=True)\n",
     "            axs[2, i_mic].plot(dists, eps_normalize(proba, eps), label=\"measured\")\n",
     "            \n",
     "        f_theo = get_freq_slice_theory(\n",
@@ -429,7 +429,7 @@
     "                diff_theo * 1e-2, proba_theo, i_mic\n",
     "            )\n",
     "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"theo\", color=\"C1\",ls=linestyles[\"theo\"],\n",
-    "                             normalize=True)\n",
+    "                             standardize=True)\n",
     "            axs[2, i_mic].plot(dists_theo, \n",
     "                               eps_normalize(proba_theo, eps=eps), label=\"theo\",ls=linestyles[\"theo\"])\n",
     "            \n",
@@ -445,7 +445,7 @@
     "                diff_theo_corr * 1e-2, proba_theo_corr-np.mean(proba_theo_corr), i_mic\n",
     "            )\n",
     "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"theo_corr\", color=\"C2\",ls=linestyles[\"theo_corr\"],\n",
-    "                             normalize=True)\n",
+    "                             standardize=True)\n",
     "            axs[2, i_mic].plot(\n",
     "                dists_theo_corr, eps_normalize(proba_theo_corr, eps), label=\"theo_corr\",ls=linestyles[\"theo_corr\"]\n",
     "            )\n",
