--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -847,7 +847,7 @@
     "\n",
     "delta_matrix = np.empty((len(azimuth_arr), len(d_arr)))\n",
     "for j, d in enumerate(d_arr):\n",
-    "    deltas = context.get_delta(azimuth_arr, d, mic_idx) * 100\n",
+    "    deltas = context.get_delta(azimuth_arr, d, mic_idx)\n",
     "    delta_matrix[:, j] = deltas\n",
     "    \n",
     "fig = plt.figure()\n",
@@ -878,7 +878,7 @@
     "d_matrix = np.empty((len(azimuth_arr), len(delta_arr)))\n",
     "    \n",
     "for i, azimuth_deg in enumerate(azimuth_arr):\n",
-    "    ds = context.get_total_distance(delta_arr*1e-2, azimuth_deg, mic_idx=0) * 100\n",
+    "    ds = context.get_distance(delta_arr, azimuth_deg, mic_idx=0)\n",
     "    d_matrix[i, :] = ds\n",
     "    \n",
     "\n",
@@ -1341,11 +1341,10 @@
     "    \n",
     "    context.plot(normal=n)\n",
     "    \n",
-    "    delta_m = context.get_delta(azimuth_deg, distance_cm, mic_idx)\n",
+    "    delta_m = context.get_delta(azimuth_deg, distance_cm, mic_idx)*1e-2\n",
     "    \n",
-    "    distance_est = context.get_total_distance(delta_m, azimuth_deg, mic_idx) * 100\n",
-    "    source_distance_m = context.get_source_distance(delta_m, azimuth_deg, mic_idx)\n",
-    "    azimuth_est = context.get_angles(delta_m, source_distance_m, mic_idx)\n",
+    "    distance_est = context.get_distance(delta_m*1e2, azimuth_deg, mic_idx)\n",
+    "    azimuth_est = context.get_angles(delta_m, distance_est*1e-2, mic_idx)\n",
     "    \n",
     "    #assert delta_est == 2, delta_est\n",
     "    #assert source_distance == 1, source_distance\n",
