--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "distance = 15\n",
     "yaws = np.array([0, 15, 30])\n",
-    "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
+    "azimuth_deg = WALL_ANGLE_DEG_STEPPER #- 180\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
@@ -166,7 +166,6 @@
    },
    "outputs": [],
    "source": [
-    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
     "from simulation import get_dist_slice_theory\n",
     "from copy import deepcopy\n",
     "from pandas_utils import fill_nans\n",
@@ -217,7 +216,7 @@
     "    slice_exp = df_matrix[:, i, :]\n",
     "    if np.any(np.isnan(slice_exp)):\n",
     "        slice_exp = fill_nans(slice_exp, df_dist)\n",
-    "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=WALL_ANGLE_DEG_STEPPER).T\n",
+    "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=azimuth_deg).T\n",
     "    \n",
     "    fig_f = plot_ffts(\n",
     "        slice_exp=slice_exp,\n",
@@ -240,7 +239,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
     "from simulation import factor_distance_to_delta\n",
     "\n",
     "d1 = df_dist[-1] # starting distance of distance slice. \n",
@@ -268,19 +266,8 @@
    "outputs": [],
    "source": [
     "from inference import get_approach_angle_fft, get_gamma_distribution, get_approach_angle_cost\n",
-    "from plotting_tools import plot_performance, save_fig\n",
+    "from plotting_tools import plot_performance, save_fig, titles, linestyles\n",
     "from estimators import get_estimate, AngleEstimator\n",
-    "\n",
-    "titles = {\n",
-    "    'cost': 'optimization-based method',\n",
-    "    'bayes': 'FFT-based method',\n",
-    "    'bayes-combination': 'Bayesian method'\n",
-    "}\n",
-    "linestyles = {\n",
-    "    \"cost\": ':',\n",
-    "    \"bayes\": '-'\n",
-    "}\n",
-    "\n",
     "\n",
     "plot_slices = False\n",
     "\n",
@@ -289,7 +276,6 @@
     "\n",
     "factor = 2\n",
     "gt_gamma = 90 # in degrees\n",
-    "\n",
     "\n",
     "fig, ax_total = plt.subplots()\n",
     "ax_total.set_xlabel('approach angle $\\\\gamma$')\n",
@@ -334,7 +320,6 @@
     "                \n",
     "            estimator.add_distribution(gammas, prob, mic_idx, f)\n",
     "                \n",
-    "            ax_cost.plot(gammas, prob)\n",
     "            gamma = get_estimate(gammas, prob)\n",
     "            err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "\n",
@@ -465,7 +450,7 @@
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_df_matrix, save_fig\n",
+    "from plotting_tools import plot_df_matrix, save_fig, titles\n",
     "\n",
     "min_freq = min(df_freq)\n",
     "max_freq = max(df_freq)\n",
@@ -533,7 +518,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from inference import get_probability_cost, get_probability_bayes\n",
@@ -548,6 +535,7 @@
     "mic_indices = range(4)\n",
     "n_mics = len(mic_indices)\n",
     "\n",
+    "distances_m = np.arange(50) * 1e-2\n",
     "distance_estimators = {}\n",
     "\n",
     "with progressbar.ProgressBar(max_value=len(distances)) as p:\n",
@@ -620,10 +608,10 @@
     "                    \n",
     "        for method, distance_estimator in distance_estimators.items():\n",
     "            \n",
-    "            # TODO(FD) remove azimuth_deg here\n",
     "            distances_here, proba = distance_estimator.get_distance_distribution(\n",
-    "                method='sum', # figure out why product doesn't work\n",
-    "                azimuth_deg=azimuth_deg\n",
+    "                method='sum',\n",
+    "                distances_m=distances_m\n",
+    "                #azimuth_deg=azimuth_deg\n",
     "            )\n",
     "            d = get_estimate(distances_here, proba) * 1e2\n",
     "            err_df.loc[len(err_df), :] = {\n",
@@ -632,6 +620,22 @@
     "                'distance': distance,\n",
     "                'method': method, \n",
     "                'algorithm': 'bayes-combination' \n",
+    "            }\n",
+    "            \n",
+    "            # TODO(FD): continue here and debug\n",
+    "            angles_here, proba = distance_estimator.get_angle_distribution(\n",
+    "                method='sum',\n",
+    "                distance_estimate_m=d*1e-2,\n",
+    "                #azimuth_deg=azimuth_deg\n",
+    "            )\n",
+    "            a = get_estimate(angles_here, proba)\n",
+    "            error = np.diff(np.unwrap([a/180*np.pi, azimuth_deg/180*np.pi])) * 180/np.pi\n",
+    "            err_df.loc[len(err_df), :] = {\n",
+    "                'error': error[0],\n",
+    "                'mic': 'all',\n",
+    "                'distance': distance,\n",
+    "                'method': method, \n",
+    "                'algorithm': 'bayes-combination-angle' \n",
     "            }"
    ]
   },
@@ -668,7 +672,7 @@
     "from inference import get_probability_cost, get_probability_bayes\n",
     "from inference import eps_normalize\n",
     "from simulation import get_freq_slice_theory\n",
-    "from matplotlib.ticker import FormatStrFormatter\n",
+    "print(df_freq.shape)\n",
     "\n",
     "mic_idx = 1\n",
     "eps = 1e-5\n",
@@ -700,28 +704,26 @@
     "    distance_estimators = {k: DistanceEstimator() for k in chosen_methods}\n",
     "\n",
     "    for i_mic, mic_idx in enumerate(mic_indices):\n",
-    "        print(mic_idx)\n",
     "        for i_method, method in enumerate(chosen_methods):\n",
-    "            print(method)\n",
     "            if method == \"theoretical\":\n",
     "                slice_exp = get_freq_slice_theory(\n",
-    "                    df_freq, distance, chosen_mics=[mic_idx]\n",
+    "                    df_freq, distance, chosen_mics=[mic_idx], azimuth_deg=azimuth_deg\n",
     "                )\n",
     "                freqs_here = df_freq\n",
     "                slice_exp = slice_exp[:, 0]\n",
-    "                std = 1\n",
+    "                #std = 1\n",
     "            else:\n",
     "                normalize_method = method_dict[method]\n",
     "                slice_exp, freqs_here, stds = data_collector.get_frequency_slice_fixed(\n",
     "                    df_freq, distance, normalize_method=normalize_method, mics=[mic_idx]\n",
     "                )\n",
     "                slice_exp = slice_exp[0]\n",
-    "                std = stds[0]\n",
-    "\n",
+    "            std = None #stds[0]\n",
+    "                \n",
     "            # slice_exp = fill_nans(slice_exp, freqs)\n",
-    "\n",
     "            # doing this here for plotting reasons. Doesn't change performance as\n",
     "            # this is done again in get_probability_cost\n",
+    "            \n",
     "            slice_exp -= np.nanmean(slice_exp)\n",
     "            slice_exp /= np.nanstd(slice_exp)\n",
     "\n",
@@ -737,7 +739,7 @@
     "\n",
     "                if algo == \"cost\":\n",
     "                    proba = get_probability_cost(\n",
-    "                        slice_exp, freqs_here, distances_grid, mic_idx=mic_idx\n",
+    "                        slice_exp, freqs_here, distances_grid, mic_idx=mic_idx, azimuth_deg=azimuth_deg\n",
     "                    )\n",
     "                    distances_here = distances_grid\n",
     "                elif algo == \"bayes\":\n",
@@ -747,6 +749,7 @@
     "                        mic_idx=mic_idx,\n",
     "                        distance_range=[min(distances_grid), max(distances_grid)],\n",
     "                        sigma=std,\n",
+    "                        azimuth_deg=azimuth_deg\n",
     "                    )\n",
     "                    distance_estimators[method].add_distribution(\n",
     "                        diff_bayes * 1e-2, proba, mic_idx\n",
@@ -775,9 +778,8 @@
     "    for i_method, (method, distance_estimator) in enumerate(\n",
     "        distance_estimators.items()\n",
     "    ):\n",
-    "        print(method)\n",
     "        distances_m, proba = distance_estimator.get_distance_distribution(\n",
-    "            azimuth_deg=0, distances_m=np.arange(40) * 1e-2, verbose=False\n",
+    "            azimuth_deg=0, distances_m=distances_m, verbose=False\n",
     "        )\n",
     "        distances_cm = distances_m * 1e2\n",
     "        ax_combi.plot(\n",
@@ -796,7 +798,6 @@
     "\n",
     "    for algo in algorithms:\n",
     "        axs_algos[algo][-1, -1].legend(loc=\"upper right\")\n",
-    "        # [ax.yaxis.set_major_formatter(FormatStrFormatter('%.1e')) for ax in axs_algos[algo][:, 0]]\n",
     "        fname_here = f\"{plot_dir}/{fname}_{algo}.png\"\n",
     "        # save_fig(fig_algos[algo], fname_here)"
    ]
@@ -828,11 +829,11 @@
     "# found from below\n",
     "plot_tuples = [(0, 3093), (0, 4434), (0, 3605)]\n",
     "\n",
-    "for i, (frequency, df_freq) in enumerate(data_collector.df.groupby('frequency')):\n",
+    "for i, (frequency, df_freq_here) in enumerate(data_collector.df.groupby('frequency')):\n",
     "    \n",
     "    # does not make a difference\n",
     "    # df_here = df_here[df_here.magnitude > 2]\n",
-    "    distances = df_freq.distance.unique()\n",
+    "    distances = df_freq_here.distance.unique()\n",
     "    if len(distances) < len(all_distances): # only plot distances with \"full coverage\"\n",
     "        continue\n",
     "    \n",
@@ -862,7 +863,7 @@
     "        method=\"one-shot median\",\n",
     "    )\n",
     "        \n",
-    "    for i_mic, (mic, df_here) in enumerate(df_freq.groupby('mic')):\n",
+    "    for i_mic, (mic, df_here) in enumerate(df_freq_here.groupby('mic')):\n",
     "        mic_idx = int(mic)\n",
     "            \n",
     "        coeffs_raw, distances_raw, fit_raw, cost_raw =  data_collector.fit_to_raw(frequency, mic_idx)\n",
